feat: fix bugs & implement docs
